# favor-cli

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/corearray-sys/: Cargo.toml  build.rs
crates/corearray-sys/cpp/: shim.cpp  shim.h
crates/corearray-sys/src/: lib.rs
crates/corearray-sys/tests/: smoke.rs
doc/: tui-backlog.md
docs/: ingest.md  staar.md  storage.md  validation.md
src/: cli.rs  column.rs  config.rs  engine.rs  error.rs  main.rs  output.rs  resource.rs  runtime.rs  test_fixtures.rs  types.rs
src/commands/: annotate.rs  annotation.rs  enrich.rs  grm.rs  ingest.rs  inspect.rs  interpret.rs  meta_staar.rs  mod.rs  staar.rs  store.rs
src/data/: mod.rs  publish.rs  transfer.rs
src/ingest/: detect.rs  format.rs  gds.rs  mod.rs  reader.rs  sql.rs  vcf.rs
src/setup/: mod.rs  tui.rs
src/staar/: ancestry.rs  genotype.rs  ground_truth_test.rs  ground_truth_tests.rs  invariance_test.rs  masks.rs  meta.rs  mod.rs  model.rs  multi.rs  multi_kinship.rs  output.rs  pipeline.rs  run_manifest.rs  scang.rs  score.rs  score_cache.rs  scoring.rs  sparse_g.rs  sparse_g_writer.rs  stats.rs  store.rs  store_validate.rs
src/staar/carrier/: encoding.rs  mod.rs  reader.rs  sparse_score.rs
src/staar/grm/: cache.rs  estimate.rs  ground_truth_test.rs  king.rs  mod.rs  pca.rs  types.rs  unrelated.rs
src/staar/kinship/: UPSTREAM.md  budget.rs  dense.rs  load.rs  mod.rs  pql.rs  reml.rs  sparse.rs  types.rs
src/staar/testdata/: invariance_golden.json
src/store/: config.rs  ids.rs  layout.rs  manifest.rs  mod.rs  scratch.rs
src/store/annotation/: mod.rs  refs.rs
src/store/backend/: local.rs  mod.rs
src/store/cache/: mod.rs  null_model_cache.rs  score_cache.rs
src/store/cohort/: builder.rs  encoding.rs  handle.rs  mod.rs  (+5 more)
src/tui/: action.rs  app.rs  artifact_view.rs  event.rs  mod.rs  output.rs  screen.rs  shell.rs  smoke.rs  term.rs  theme.rs
(+40 files in other folders)
