[workspace]
members = [".", "crates/corearray-sys"]
resolver = "2"

[package]
name = "favor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Genomic variant annotation, tissue enrichment, and rare-variant association testing"
license = "GPL-3.0"
repository = "https://github.com/vineetver/favor-cli"
homepage = "https://github.com/vineetver/favor-cli"
readme = "README.md"
keywords = ["genomics", "staar", "rare-variant", "association-testing", "annotation"]
categories = ["science", "command-line-utilities"]
authors = ["Vineet Verma <vineetver@hotmail.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
ureq = "3"
dirs = "6"
sha2 = "0.10"
memmap2 = "0.9"
faer = "0.22"
statrs = "0.18"
rayon = "1.10"
walkdir = "2"
memchr = "2"

# GDS (SeqArray) ingest: FFI to vendored CoreArray C++ library
corearray-sys = { path = "crates/corearray-sys" }

# VCF → parquet: streaming parser + columnar writer
noodles-vcf = "0.73"
noodles-bgzf = "0.14"
arrow = { version = "58", default-features = false, features = ["ipc"] }
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }

# DataFusion: query execution engine
datafusion = "53"
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256

[profile.dev.build-override]
opt-level = 0
codegen-units = 256
debug = false

# Optimized iteration: fast rebuilds, still runs at near-release speed.
[profile.release-fast]
inherits = "release"
incremental = true
codegen-units = 256
lto = "off"
debug = false
strip = "debuginfo"

# Shipping build.
[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"

[dev-dependencies]
tempfile = "3.27.0"
